update all files

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,9 @@
-:root {
-  --font-roboto: 'Arial';
-}
-
-html,
-body {
-  height: 100%;
-}
+/* app/globals.css */
 
 body {
+  color: var(--foreground);
+  background: var(--background);
   font-family: var(--font-roboto), sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
-  background-color: #f8f9fa;
-  overflow-x: hidden;
-}
-
-main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-height: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
