--- a/app/(private routes)/notes/filter/LayoutNotes.module.css
+++ b/app/(private routes)/notes/filter/LayoutNotes.module.css
@@ -1,8 +1,6 @@
 .container {
     display: flex;
     flex-direction: row;
-    flex: 1;
-    min-height: 0;
 }
 
 .sidebar {
@@ -13,14 +11,8 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid #ddd;
-    min-height: 0;
-    overflow-y: auto;
 }
 
 .notesWrapper {
-    flex: 1;
-    min-height: 0;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
+    width: 100%;
 }
