--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -1,25 +1,14 @@
-.main {
-    flex: 1;
-}
-
 .container {
-    width: 90%;
-    max-width: 1280px;
-    margin: 0px auto;
-    padding: 0 16px 16px;
+  padding: 24px;
+  text-align: center;
 }
 
 .title {
-    font-size: 36px;
-    font-weight: 700;
-    color: #1a1a1a;
-    margin-bottom: 60px;
-    text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 8px;
 }
 
 .description {
-    font-size: 18px;
-    color: #444444;
-    line-height: 28px;
-    margin-bottom: 16px;
+  color: #555;
 }
