--- a/components/NoteList/NoteList.module.css
+++ b/components/NoteList/NoteList.module.css
@@ -81,6 +81,7 @@
     font-size: 14px;
     color: #fff;
     background-color: #0d6efd;
+    /* синій колір */
     border: none;
     border-radius: 4px;
     cursor: pointer;
